log/build_2024-09-18_11-05-50/webots_ros2_homework1_python/stderr.log
  File "/home/liam/f24_robotics/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 24
    global START = False
                 ^
SyntaxError: invalid syntax

